basis-universal-sys/vendor/transcode_basis_wrapper.h

    //
    // basisu_transcoder
    //
    struct BasisUniversalTranscoder {
        basist::basisu_transcoder *pTranscoder;
    };
    // transcode_image_level() decodes a single mipmap level from the .basis file to any of the supported output texture formats.
    // It'll first find the slice(s) to transcode, then call transcode_slice() one or two times to decode both the color and alpha texture data (or RG texture data from two slices for BC5).
    // If the .basis file doesn't have alpha slices, the output alpha blocks will be set to fully opaque (all 255's).
    // Currently, to decode to PVRTC1 the basis texture's dimensions in pixels must be a power of 2, due to PVRTC1 format requirements.
    // output_blocks_buf_size_in_blocks_or_pixels should be at least the image level's total_blocks (num_blocks_x * num_blocks_y), or the total number of output pixels if fmt==cTFRGBA32.
    // output_row_pitch_in_blocks_or_pixels: Number of blocks or pixels per row. If 0, the transcoder uses the slice's num_blocks_x or orig_width (NOT num_blocks_x * 4). Ignored for PVRTC1 (due to texture swizzling).
    // output_rows_in_pixels: Ignored unless fmt is cRGBA32. The total number of output rows in the output buffer. If 0, the transcoder assumes the slice's orig_height (NOT num_blocks_y * 4).
    // Notes:
    // - basisu_transcoder_init() must have been called first to initialize the transcoder lookup tables before calling this function.
    // - This method assumes the output texture buffer is readable. In some cases to handle alpha, the transcoder will write temporary data to the output texture in
    // a first pass, which will be read in a second pass.
    bool basis_universal_transcoder_transcode_image_level(
        BasisUniversalTranscoder *transcoder,
        const void *pData,
        uint32_t data_size,
        uint32_t image_index,
        uint32_t level_index,
        void *pOutput_blocks,
        uint32_t output_blocks_buf_size_in_blocks_or_pixels,
        basist::transcoder_texture_format fmt,
        basist::basisu_decode_flags decode_flags, // default: 0
        uint32_t output_row_pitch_in_blocks_or_pixels, // default: 0
        basist::basisu_transcoder_state *pState, // default: nullptr
        uint32_t output_rows_in_pixels // default: 0
    ) {
        return transcoder->pTranscoder->transcode_image_level(
                pData,
                data_size,
                image_index,
                level_index,
                pOutput_blocks,
                output_blocks_buf_size_in_blocks_or_pixels,
                fmt,
                decode_flags,
                output_row_pitch_in_blocks_or_pixels,
                pState,
                output_rows_in_pixels
        );
    }