basis-universal-sys/src/transcoding.rs

unsafe extern "C" {
    pub fn basis_universal_transcoder_transcode_image_level(
        transcoder: *mut BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        image_index: u32,
        level_index: u32,
        pOutput_blocks: *mut ::std::os::raw::c_void,
        output_blocks_buf_size_in_blocks_or_pixels: u32,
        fmt: basist_transcoder_texture_format,
        decode_flags: basist_basisu_decode_flags,
        output_row_pitch_in_blocks_or_pixels: u32,
        pState: *mut basist_basisu_transcoder_state,
        output_rows_in_pixels: u32,
    ) -> bool;
}
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct Ktx2Transcoder {
    pub _bindgen_opaque_blob: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Ktx2Transcoder"][::std::mem::size_of::<Ktx2Transcoder>() - 8usize];
    ["Alignment of Ktx2Transcoder"][::std::mem::align_of::<Ktx2Transcoder>() - 8usize];
};
unsafe extern "C" {
    pub fn ktx2_transcoder_new() -> *mut Ktx2Transcoder;
}
unsafe extern "C" {
    pub fn ktx2_transcoder_init(
        transcoder: *mut Ktx2Transcoder,
        data: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_transcoder_delete(transcoder: *mut Ktx2Transcoder);
}
unsafe extern "C" {
    pub fn ktx2_get_is_hdr(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_ldr(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_hdr_4x4(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_hdr_6x6(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_video(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_uastc(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_etc1s(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_srgb(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_is_linear(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_has_alpha(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_channel_id0(transcoder: *const Ktx2Transcoder)
        -> basist_ktx2_df_channel_id;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_channel_id1(transcoder: *const Ktx2Transcoder)
        -> basist_ktx2_df_channel_id;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_color_primaries(
        transcoder: *const Ktx2Transcoder
    ) -> basist_ktx2_df_color_primaries;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_color_model(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_flags(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_dfd_total_samples(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_block_width(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_block_height(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_layers(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_levels(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_faces(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_pixel_depth(transcoder: *const Ktx2Transcoder) -> u32;
}
unsafe extern "C" {
    pub fn ktx2_get_basis_tex_format(transcoder: *const Ktx2Transcoder) -> basist_basis_tex_format;
}
unsafe extern "C" {
    pub fn ktx2_start_transcoding(transcoder: *const Ktx2Transcoder) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_get_image_level_info(
        transcoder: *const Ktx2Transcoder,
        level_info: *mut basist_ktx2_image_level_info,
        level_index: u32,
        layer_index: u32,
        face_index: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ktx2_transcoder_transcode_image_level(
        transcoder: *mut Ktx2Transcoder,
        level_index: u32,
        layer_index: u32,
        face_index: u32,
        pOutput_blocks: *mut ::std::os::raw::c_void,
        output_blocks_buf_size_in_blocks_or_pixels: u32,
        fmt: basist_transcoder_texture_format,
        decode_flags: u32,
        output_row_pitch_in_blocks_or_pixels: u32,
        output_rows_in_pixels: u32,
        channel0: ::std::os::raw::c_int,
        channel1: ::std::os::raw::c_int,
        pState: *mut basist_ktx2_transcoder_state,
    ) -> bool;
}
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct LowLevelUastcLdr4x4Transcoder {
    pub _bindgen_opaque_blob: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LowLevelUastcLdr4x4Transcoder"]
        [::std::mem::size_of::<LowLevelUastcLdr4x4Transcoder>() - 8usize];
    ["Alignment of LowLevelUastcLdr4x4Transcoder"]
        [::std::mem::align_of::<LowLevelUastcLdr4x4Transcoder>() - 8usize];
};
unsafe extern "C" {
    pub fn low_level_uastc_ldr_4x4_transcoder_new() -> *mut LowLevelUastcLdr4x4Transcoder;
}
unsafe extern "C" {
    pub fn low_level_uastc_ldr_4x4_transcoder_delete(
        transcoder: *mut LowLevelUastcLdr4x4Transcoder
    );
}
unsafe extern "C" {
    pub fn low_level_uastc_ldr_4x4_transcoder_transcode_slice(
        transcoder: *mut LowLevelUastcLdr4x4Transcoder,
        pDst_blocks: *mut ::std::os::raw::c_void,
        num_blocks_x: u32,
        num_blocks_y: u32,
        pImage_data: *const u8,
        image_data_size: u32,
        fmt: basist_block_format,
        output_block_or_pixel_stride_in_bytes: u32,
        bc1_allow_threecolor_blocks: bool,
        has_alpha: bool,
        orig_width: u32,
        orig_height: u32,
        output_row_pitch_in_blocks_or_pixels: u32,
        pState: *mut basist_basisu_transcoder_state,
        output_rows_in_pixels: u32,
        channel0: ::std::os::raw::c_int,
        channel1: ::std::os::raw::c_int,
        decode_flags: i32,
    ) -> bool;
}
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct LowLevelUastcHdr4x4Transcoder {
    pub _bindgen_opaque_blob: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LowLevelUastcHdr4x4Transcoder"]
        [::std::mem::size_of::<LowLevelUastcHdr4x4Transcoder>() - 8usize];
    ["Alignment of LowLevelUastcHdr4x4Transcoder"]
        [::std::mem::align_of::<LowLevelUastcHdr4x4Transcoder>() - 8usize];
};
unsafe extern "C" {
    pub fn low_level_uastc_hdr_4x4_transcoder_new() -> *mut LowLevelUastcHdr4x4Transcoder;
}
unsafe extern "C" {
    pub fn low_level_uastc_hdr_4x4_transcoder_delete(
        transcoder: *mut LowLevelUastcHdr4x4Transcoder
    );
}
unsafe extern "C" {
    pub fn low_level_uastc_hdr_4x4_transcoder_transcode_slice(
        transcoder: *mut LowLevelUastcHdr4x4Transcoder,
        pDst_blocks: *mut ::std::os::raw::c_void,
        num_blocks_x: u32,
        num_blocks_y: u32,
        pImage_data: *const u8,
        image_data_size: u32,
        fmt: basist_block_format,
        output_block_or_pixel_stride_in_bytes: u32,
        bc1_allow_threecolor_blocks: bool,
        has_alpha: bool,
        orig_width: u32,
        orig_height: u32,
        output_row_pitch_in_blocks_or_pixels: u32,
        pState: *mut basist_basisu_transcoder_state,
        output_rows_in_pixels: u32,
        channel0: ::std::os::raw::c_int,
        channel1: ::std::os::raw::c_int,
        decode_flags: i32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_get_bytes_per_block_or_pixel(fmt: basist_transcoder_texture_format) -> u32;
}
unsafe extern "C" {
    pub fn basis_get_format_name(
        fmt: basist_transcoder_texture_format
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn basis_get_block_format_name(fmt: basist_block_format) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn basis_transcoder_format_has_alpha(fmt: basist_transcoder_texture_format) -> bool;
}
unsafe extern "C" {
    pub fn basis_get_basisu_texture_format(
        fmt: basist_transcoder_texture_format
    ) -> basisu_texture_format;
}
unsafe extern "C" {
    pub fn basis_get_texture_type_name(
        tex_type: basist_basis_texture_type
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn basis_transcoder_format_is_uncompressed(
        tex_type: basist_transcoder_texture_format
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_block_format_is_uncompressed(fmt: basist_block_format) -> bool;
}
unsafe extern "C" {
    pub fn basis_get_uncompressed_bytes_per_pixel(fmt: basist_transcoder_texture_format) -> u32;
}
unsafe extern "C" {
    pub fn basis_get_block_width(tex_type: basist_transcoder_texture_format) -> u32;
}
unsafe extern "C" {
    pub fn basis_get_block_height(tex_type: basist_transcoder_texture_format) -> u32;
}
unsafe extern "C" {
    pub fn basis_is_format_supported(
        tex_type: basist_transcoder_texture_format,
        fmt: basist_basis_tex_format,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_validate_output_buffer_size(
        target_format: basist_transcoder_texture_format,
        output_blocks_buf_size_in_blocks_or_pixels: u32,
        orig_width: u32,
        orig_height: u32,
        output_row_pitch_in_blocks_or_pixels: u32,
        output_rows_in_pixels: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_compute_transcoded_image_size_in_bytes(
        target_format: basist_transcoder_texture_format,
        orig_width: u32,
        orig_height: u32,
    ) -> u32;
}
unsafe extern "C" {
    pub fn basisu_transcoder_init();
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of template specialization: basisu_vector_open0_uint8_t_close0"]
        [::std::mem::size_of::<basisu_vector<u8>>() - 24usize];
    ["Align of template specialization: basisu_vector_open0_uint8_t_close0"]
        [::std::mem::align_of::<basisu_vector<u8>>() - 8usize];
};
